# tddByExample

./: CMakeLists.txt  CMakelists.txt  Dockerfile  LICENSE  README.md
src/: CMakeLists.txt  CMakelists.txt
src/project1/: CMakeLists.txt  CMakelists.txt
src/project1/chapter_1/: CMakeLists.txt
src/project1/chapter_1/include/: money.hpp
src/project1/chapter_2/: CMakeLists.txt
src/project1/chapter_2/tests/: CMakeLists.txt  money_tests.cpp
src/project1/include/: money.hpp
src/project1/tests/: CMakeLists.txt  money_tests.cpp
tests/: CMakelists.txt
